--- a/components/SubMenu.html
+++ b/components/SubMenu.html
@@ -98,7 +98,7 @@
       <ul class="flex container-nav-ul container-T text-sm w-full justify-start md:justify-center gap-2 overflow-x-auto px-2 scrollbar-hide" style="color: #4c4c4c;">
         
         <li>
-          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_unifi.html" target="_blank"
+          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_unifi.html" onclick="navigateParent(this.href); return false;"
              class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 md:w-auto md:h-auto">
@@ -112,7 +112,7 @@
         </li>
 
         <li>
-          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_powerbeam.html" target="_blank"
+          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_powerbeam.html" onclick="navigateParent(this.href); return false;"
              class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="35" height="38" viewBox="0 0 35 38" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-7 h-auto md:w-auto md:h-auto">
@@ -126,7 +126,7 @@
         </li>
 
         <li>
-          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_airFiber.html" target="_blank"
+          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_airFiber.html" onclick="navigateParent(this.href); return false;"
              class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="45" height="38" viewBox="0 0 45 38" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-auto md:w-auto md:h-auto">
@@ -139,7 +139,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_antenas.html" target="_blank"
+          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_antenas.html" onclick="navigateParent(this.href); return false;"
             class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="35" height="40" viewBox="0 0 35 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-7 h-auto md:w-auto md:h-auto">
@@ -167,7 +167,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_LTU_5GHz.html" target="_blank"
+          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_LTU_5GHz.html" onclick="navigateParent(this.href); return false;"
             class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="43" height="38" viewBox="0 0 43 38" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-auto md:w-auto md:h-auto">
@@ -180,7 +180,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_switch.html" target="_blank"
+          <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/precios_switch.html" onclick="navigateParent(this.href); return false;"
             class="menu-item flex flex-col items-center hover:bg-gray-100 p-3 rounded-md cursor-pointer ease duration-200 w-24 md:w-32 shrink-0">
             <div class="h-12 flex items-center justify-center">
               <svg width="94" height="34" viewBox="0 0 94 34" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-16 h-auto md:w-auto md:h-auto">
@@ -195,6 +195,31 @@
       </ul>
     </div>
   </nav>
+  <script>
+  // Función para navegar desde el iframe a la página padre
+  function navigateParent(url) {
+    try {
+      // Navegar en la ventana principal (página padre)
+      window.parent.location.href = url;
+    } catch (e) {
+      // Si hay error, navegar en la ventana actual
+      console.error("Error al navegar a página padre:", e);
+      window.location.href = url;
+    }
+  }
+  
+  // También podemos agregar event listeners para mayor compatibilidad
+  document.addEventListener('DOMContentLoaded', function() {
+    const links = document.querySelectorAll('.menu-item');
+    links.forEach(link => {
+      link.addEventListener('click', function(e) {
+        e.preventDefault();
+        const url = this.getAttribute('href');
+        navigateParent(url);
+      });
+    });
+  });
+  </script>
 </body>
 
 </html>
