--- a/components/lista_u7.html
+++ b/components/lista_u7.html
@@ -60,7 +60,7 @@
     <div class="mt-5 flex flex-wrap justify-center pb-10">
         <div class="flex gap-5 container-T flex-wrap justify-center flex-wrap h-full">
 
-            <a href="http://127.0.0.1:5502/U7-lite-b.html"
+            <a href=""
                     class="cursor-pointer border-l border-t border-r shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3"> <img
                             src="https://www.ds3comunicaciones.com/ubiquiti/images//U7-LITE_front_face.png" alt=""
