--- a/components/lista_u7.html
+++ b/components/lista_u7.html
@@ -81,7 +81,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="../img/u7-lr_side.png" alt=""
+                        <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-lr_side.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -101,7 +101,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="../img/u7-pro_front.png" alt=""
+                        <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro_front.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -121,7 +121,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="../img/u7-pro-wall_front.png" alt=""
+                        <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro-wall_front.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -141,7 +141,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="../img/u7-pro-xg_front.png" alt=""
+                        <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro-xg_front.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -161,7 +161,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="../img/u7-pro-xgs_side.png" alt=""
+                        <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro-xgs_side.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -181,7 +181,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="../img/u7-outdoor_front.png" alt=""
+                        <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-outdoor_front.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -201,7 +201,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="../img/u7-pro-outdoor_side.png" alt=""
+                        <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro-outdoor_side.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -221,7 +221,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="../img/u7-pro-max_front.png" alt=""
+                        <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro-max_front.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -241,7 +241,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="../img/u6-plus_side.png" alt=""
+                        <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u6-plus_side.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
