--- a/components/lista_u7.html
+++ b/components/lista_u7.html
@@ -60,7 +60,7 @@
     <div class="mt-5 flex flex-wrap justify-center pb-10">
         <div class="flex gap-5 container-T flex-wrap justify-center flex-wrap h-full">
 
-            <a href=""
+            <a href="../U7-lite.html"
                     class="cursor-pointer border-l border-t border-r shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3"> <img
                             src="https://www.ds3comunicaciones.com/ubiquiti/images//U7-LITE_front_face.png" alt=""
@@ -78,7 +78,7 @@
                         </p>
                     </div>
                 </a>
-                <a href=""
+                <a href="../U7-lr.html"
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-lr_side.png" alt=""
@@ -98,7 +98,7 @@
                         </p>
                     </div>
                 </a>
-                <a href=""
+                <a href="../U7-pro.html"
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro_front.png" alt=""
@@ -118,7 +118,7 @@
                         </p>
                     </div>
                 </a>
-                <a href=""
+                <a href="../U7-pro-wall.html"
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro-wall_front.png" alt=""
@@ -138,7 +138,7 @@
                         </p>
                     </div>
                 </a>
-                <a href=""
+                <a href="../U7-pro-xg.html"
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro-xg_front.png" alt=""
@@ -158,7 +158,7 @@
                         </p>
                     </div>
                 </a>
-                <a href=""
+                <a href="../U7-pro-xgs.html"
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro-xgs_side.png" alt=""
@@ -178,7 +178,7 @@
                         </p>
                     </div>
                 </a>
-                <a href=""
+                <a href="../U7-outdoor.html"
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-outdoor_front.png" alt=""
@@ -198,7 +198,7 @@
                         </p>
                     </div>
                 </a>
-                <a href=""
+                <a href="../U7-pro-outdoor.html"
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro-outdoor_side.png" alt=""
@@ -218,7 +218,7 @@
                         </p>
                     </div>
                 </a>
-                <a href=""
+                <a href="../U7-pro-max.html"
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u7-pro-max_front.png" alt=""
@@ -238,7 +238,7 @@
                         </p>
                     </div>
                 </a>
-                <a href=""
+                <a href="../U6-plus.html"
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="https://www.ds3comunicaciones.com/ubiquiti/u7/img/u6-plus_side.png" alt=""
